[package]
name = "launch-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.4", features = [
    'console',
    'Blob',
    'BlobPropertyBag',
    'Document',
    'Location',
    'Url',
    'Window',
    'Worker',
] }
